# astero

./: .gitignore  CMakeLists.txt  readme.md
.claude/: settings.local.json
cmake/: FetchRaylib.cmake
docs/: architecture.md  asteroid-system.md  base-mode.md  economy.md  fluid-simulation.md  fog-of-war.md  implementation-checklist.md  lighting.md  mission-mode.md  weapons.md
src/: main.cpp
src/base/: base_scene.cpp  base_scene.h  crafting.cpp  crafting.h  market.cpp  market.h  quests.cpp  quests.h
src/core/: console.cpp  console.h  game.cpp  game.h  game_state.cpp  game_state.h  save.cpp  save.h
src/mission/: asteroid.cpp  asteroid.h  asteroid_generator.cpp  asteroid_generator.h  bullet_tracer.cpp  bullet_tracer.h  chunk.h  dust_sim.cpp  dust_sim.h  ftl.h  lighting.cpp  lighting.h  minimap.cpp  minimap.h  mission_scene.cpp  mission_scene.h  projectile.cpp  projectile.h  ship.cpp  ship.h  tile.h  weapon_manager.cpp  weapon_manager.h
src/mission/weapons/: catcher.cpp  catcher.h  explosive.cpp  explosive.h  flare.cpp  flare.h  intel_drone.cpp  intel_drone.h
